--- a/AKchatApp/src/app/header/header.component.html
+++ b/AKchatApp/src/app/header/header.component.html
@@ -1,37 +1,45 @@
 <nav class="navbar navbar-dark bg-success">
-  <div class="container-fluid d-flex justify-content-center" *ngIf="!service.myName">
-    <span class="navbar-brand mb-0 h1">Chat Application</span>
+  <div class="row container-fluid" *ngIf="!service.myName">
+    <div class="col-7 d-flex justify-content-end"> <span class="navbar-brand mb-0 h1">Chat Application</span></div>
+    <div class="col-5 d-flex justify-content-end">
+      <a class="btn btn-danger mx-1 " (click)="logout()">Home</a>
+    </div>
   </div>
 
+
+  <!-- after login header -->
   <div class="container-fluid d-flex" *ngIf="service.myName">
-    <div class="col-md-6"></div>
-    <div class="col-md-6 justify-content-between d-flex header">
-      <div>
-         <span class="navbar-brand mb-0 h1">Chat Application</span>
-      </div>
-
-      
-
-
-        <div class="dropdown mb-0">
-          <img class="user-image me-2" [src]="this.service.imageUrl" alt="">
-          <button class="btn  dropdown-toggle p-0 dbtn" type="button" data-bs-toggle="dropdown"
-            aria-expanded="false">
-            <span class="navbar-brand ">{{service.myName}}</span>
-          </button>
-          <ul class="dropdown-menu mt-2" style="background-color: rgba(25,135,84,255);padding: 10px;"><hr>
-            <li><a class="btn btn-primary mx-1 buttons" (click)="profile()">Profile</a></li><hr>
-            <li><a class="btn btn-danger mx-1 buttons" (click)="logout()">LogOut</a></li><hr>
-          </ul>
-        </div>
-
-
-
-
-          <!-- <span class="navbar-brand mb-0 h1 mx-1">{{service.myName}}</span>
-          <a class="btn btn-primary mx-1" (click)="profile()">Profile</a>
-          <button class="btn btn-danger mx-1" (click)="logout()">LogOut</button> -->
+    <div class="col-md-6">
+      <div *ngIf="!isChatRoute && extractedWord !== 'chat'">
+        <button class="btn btn-warning btn-sm" type="button" [routerLink]="['/chat']"><i class="bi bi-arrow-left"></i>
+          &nbsp; Back to Chat</button>
       </div>
     </div>
-  
+    <div class="col-md-6 d-flex justify-content-between header">
+      
+      <div>
+        <span class="navbar-brand mb-0 h1">Chat Application</span>
+      </div>
+      <div class="dropdown mb-0 d-flex">
+        <div>
+          <button class="btn btn-danger btn-sm me-3" type="button" [routerLink]="['/gallery']"><i
+              class="bi bi-images"></i> &nbsp; photo-gallery</button>
+        </div>
+        <div>
+          <img class="user-image me-2" [src]="this.service.imageUrl" alt="">
+          <button class="btn  dropdown-toggle p-0 dbtn" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+            <span class="navbar-brand ">{{service.myName}}</span>
+          </button>
+          <ul class="dropdown-menu mt-2" style="background-color: rgba(25,135,84,255);padding: 10px;">
+            <hr>
+            <li><a class="btn btn-primary mx-1 buttons" (click)="profile()">Profile</a></li>
+            <hr>
+            <li><a class="btn btn-danger mx-1 buttons" (click)="logout()">LogOut</a></li>
+            <hr>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </div>
+
 </nav>
