--- a/AKchatApp/src/app/login-page/login-page.component.css
+++ b/AKchatApp/src/app/login-page/login-page.component.css
@@ -8,3 +8,13 @@ margin-right: 10px;
 .mainBody{
     height: 590px;
 }
+
+.context-menu {
+    position: absolute;
+    top: 50px; /* Adjust the top value to position the context menu */
+    left: 100px; /* Adjust the left value to position the context menu */
+    background-color: white;
+    border: 1px solid #ccc;
+    padding: 10px;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
+  }
