--- a/AKchatApp/src/app/chat/chatpage/chatpage.component.html
+++ b/AKchatApp/src/app/chat/chatpage/chatpage.component.html
@@ -62,7 +62,7 @@
                 <app-messages [messages]="service.messages"></app-messages>
             </div>
             <div class="card-footer">
-                <app-chat-input (contentemitter)="sendMessage($event)"></app-chat-input>
+                <!-- <app-chat-input (contentemitter)="sendMessage($event)"></app-chat-input> -->
             </div>
         </div>
     </div>
