--- a/AKchatApp/src/styles.css
+++ b/AKchatApp/src/styles.css
@@ -1,7 +1,14 @@
-/* You can add global styles to this file, and also import other style files */
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+/* .modal-container{
+    z-index: 1000;
+    position:relative;
+}
+.dialogue-container{
+    z-index: 1500;
+    position: relative;
+} */
