--- a/AKchatApp/src/app/chat/messages/messages.component.html
+++ b/AKchatApp/src/app/chat/messages/messages.component.html
@@ -1,48 +1,105 @@
-<div style="overflow-y: auto;height: 400px;">
-    <div class="card-text d-flex mb-2" *ngFor="let message of messages,let messageId=index"  [class.justify-content-between]="message.from !== service.myName"
-    [class.justify-content-end]="message.from === service.myName">
+<div style="height:400px;" *ngIf="service.isgeneral">
+    <div class="card-text d-flex mb-2"  *ngFor="let message of messages">
+<div class="contentdiv">
+    <span class="text sender fw-bolder">{{ message.from }}: </span>
+    <span class="ml-1">{{message.content}}</span>
+</div>
+</div>
+</div>
+
+<div style="overflow-y: auto;height: 400px;z-index: 1001;"  *ngIf="!service.isgeneral">
+    <div class="card-text d-flex mb-2" *ngFor="let message of messages,let messageId=index"
+        [class.justify-content-between]="message.from !== service.myName"
+        [class.justify-content-end]="message.from === service.myName">
         <div class="d-flex messages position-relative" [class.messagesFromOthers]="message.from !== service.myName"
             [class.messagesFromMe]="message.from === service.myName">
-            <div class="contentdiv">
+            <div class="contentdiv d-flex">
                 <ng-container *ngIf="message.from !== service.myName">
                     <span class="text sender fw-bolder">{{ message.from }}: </span>
                 </ng-container>
-                <span class="ml-1 message-messageId">{{message.content}}</span>
-                <span (click)="togglediv(messageId)" *ngIf="message.from===service.myName" class=" dots"><img src="/assets/img/dots.png" class="opendiv" style="height:15px;width:10px"></span>
+                <span (click)="togglediv(messageId)" *ngIf="message.from!==service.myName" class=" dots"><img src="/assets/img/dots.png" class="open1div" style="height:15px;width:10px"></span>
+            
+                <div class="div1cont d-flex flex-column" *ngIf="message.from!==service.myName"
+                    [class.d-none]="!msgservice.messageDivVisibility[messageId]">
+                    <span (click)="DeleteMsg(message.messageid)" class="text-primary"><i class="bi bi-trash3-fill"></i>Delete</span>
+                    <span *ngIf="message.messageLike===1" (click)="LikeMsg(message.messageid,0)"><i class="bi bi-suit-heart-fill colorheart"></i>like</span>
+                    <span *ngIf="message.messageLike===0" (click)="LikeMsg(message.messageid,messageId)"><i class="bi bi-suit-heart-fill" [class.colorheart]="msgservice.messageDiv1Visibility[messageId]"></i>like</span>
+                    <span (click)="closediv(messageId)"><i class="bi bi-x-lg"></i>Close</span>
+                </div>
+                <span class="likelogo" *ngIf="message.from!==service.myName && message.messageLike===0" (click)="openDialogue(message.messageid)"><img src="assets/img/heart.jpg" style="height:15px;width:10px" [class.d-none]="!msgservice.messageDiv1Visibility[messageId]">
+                    <span>{{msgservice.messageDiv2Visibility[messageId]}}</span>
+                </span>
+                <span class="likelogo {{'heart-'+ message.messageid}}" *ngIf="message.from!==service.myName && message.messageLike===1" (click)="openDialogue(message.messageid)"><img src="assets/img/heart.jpg" style="height:15px;width:10px">
+                    <span class="d-none">{{msgservice.messageDiv2Visibility[messageId]}}</span>
+                    
+                </span>
+                <span class="likelogo text-primary" *ngIf="message.from!==service.myName">{{msgservice.messageDiv2Visibility[messageId]?.count}}</span> 
+
+                <!-- <div *ngIf="message.from!==service.myName">
+                    <span class="likelogo" *ngIf="message.MessageLike ===0" (click)="openDialogue()"><img src="assets/img/heart.jpg" style="height:15px;width:10px" [class.d-none]="!messageDiv1Visibility[messageId]"></span>
+                </div> -->
+
+                <!-- <div class="memdiv d-flex flex-column" style="background-color: antiquewhite;" 
+                [class.d-none]="!messageDiv2Visibility[messageId]">
+                <div>
+                    <span> called by these peoples</span>
+                    <span (click)="closePdiv(messageId)" style="z-index:25">Close</span>
+                </div>
+                  
+               </div> -->
+               <!-- <div *ngIf="message.from===service.myName">
+                 <span  class="likelogo"  *ngIf="message.MessageLike===0"><img src="assets/img/heart.jpg" style="height:15px;width:10px" [class.d-none]="!messageDiv1Visibility[messageId]"></span>
+                 <span  class="likelogo"  *ngIf="message.MessageLike === 1"><img src="assets/img/heart.jpg" style="height:15px;width:10px" [class.d-none]="messageDiv1Visibility[messageId]"></span>
+               </div> -->
+               <span  class="likelogo"   *ngIf="message.from===service.myName && message.messageLike===0"  (click)="openDialogue(message.messageid)"><img src="assets/img/heart.jpg" style="height:15px;width:10px" [class.d-none]="!msgservice.messageDiv1Visibility[messageId]">
+                <span>{{msgservice.messageDiv2Visibility[messageId]}}</span>
+            </span>
+               <span  class="likelogo {{'heart-'+ message.messageid}}"  *ngIf="message.from===service.myName && message.messageLike===1"  (click)="openDialogue(message.messageid)"><img src="assets/img/heart.jpg" style="height:15px;width:10px">
+                <span class="d-none">{{msgservice.messageDiv2Visibility[messageId]}}</span>
+              </span>
+              <span class="likelogo text-primary"  *ngIf="message.from===service.myName">{{msgservice.messageDiv2Visibility[messageId]?.count}}</span> 
+
+
+                <span class="ml-1">{{message.content}}</span>
+              
+                <!-- for other message -->
+
+
+              
+                <!-- For mine message only -->
+                <span (click)="togglediv(messageId)" *ngIf="message.from===service.myName" class=" dots"><img
+                        src="/assets/img/dots.png" class="opendiv" style="height:15px;width:10px"></span>
                 <!-- <button class="btn btn-primary opendiv" >:</button> -->
-                <div class="divcont d-flex flex-column" [class.d-none]="!messageDivVisibility[messageId]">
-                  <span class="text-primary">Delete</span>
-                  <span class="">like</span>
-                  <button class="border-0"  (click)="closediv(messageId)">Close</button>
+                <div class="divcont d-flex flex-column" *ngIf="message.from===service.myName"
+                    [class.d-none]="!msgservice.messageDivVisibility[messageId]">
+                    <span (click)="DeleteMsg(message.messageid)" class="text-primary"><i
+                            class="bi bi-trash3-fill me-1"></i>Delete</span>
+                    <span *ngIf="message.messageLike===1" (click)="LikeMsg(message.messageid,0)"><i class="bi bi-suit-heart-fill colorheart"></i>like</span>
+                    <span *ngIf="message.messageLike===0" (click)="LikeMsg(message.messageid,messageId)"><i class="bi bi-suit-heart-fill"  [class.colorheart]="msgservice.messageDiv1Visibility[messageId]"></i>like</span>
+
+                    <span (click)="closediv(messageId)"><i class="bi bi-x-lg me-1"></i>Close</span>
                 </div>
                 <ng-container *ngIf="!this.service.isGroupChat; else groupChat">
-                    <img src="/assets/img/onetick.jpg" class="ticks" style="height: 15px;width: 15px;position: relative;left: 9px;top: 11px;"
+                    <img src="/assets/img/onetick.jpg" class="ticks"
+                        style="height: 15px;width: 15px;position: relative;left: 9px;top: 11px;"
                         *ngIf="message.from === this.service.myName && message.isdelievered === 0 && message.isread === 0">
-                    <img src="/assets/img/dtick.png" class="ticks" style="height: 15px;width: 15px;position: relative;left: 9px;top: 11px;"
+                    <img src="/assets/img/dtick.png" class="ticks"
+                        style="height: 15px;width: 15px;position: relative;left: 9px;top: 11px;"
                         *ngIf="message.from === this.service.myName && message.isdelievered === 1 && message.isread===0">
-                    <img src="/assets/img/bluedtick.png"class="ticks" style="height: 15px;width: 15px;position: relative;left: 9px;top: 11px;"
+                    <img src="/assets/img/bluedtick.png" class="ticks"
+                        style="height: 15px;width: 15px;position: relative;left: 9px;top: 11px;"
                         *ngIf="message.from === this.service.myName && message.isread === 1">
                 </ng-container>
 
                 <ng-template #groupChat>
-                    <img src="/assets/img/onetick.jpg"class="ticks" style="height: 15px; width: 15px;"
+                    <img src="/assets/img/onetick.jpg" class="ticks" style="height: 15px; width: 15px;"
                         *ngIf="message.from===this.service.myName && message.isgrpread===0">
-                    <img src="/assets/img/bluedtick.png"class="ticks" style="height: 15px; width: 15px;"
+                    <img src="/assets/img/bluedtick.png" class="ticks" style="height: 15px; width: 15px;"
                         *ngIf="message.from===this.service.myName && message.isgrpread===1">
                 </ng-template>
             </div>
 
-            <div *ngIf="showContextMenu" class="context-menu" >
-                <button (click)="deleteChat()" style="background-color: transparent;border: 0px;padding: 0px;"><i class="bi bi-trash-fill"></i></button>
-              </div>
         </div>
-       
-        <!-- <li>
-            <button mat-raised-button (click)="openDialog()">Pick one</button>
-          </li>
-          <li >
-            You chose: <em>fhgdfj</em>
-          </li> -->
 
         <div class="d-flex justify-content-end align-items-center ms-2">
             <span class=" date">{{message.time | date:'MMM dd, HH:mm'}}</span>
