--- a/AKchatApp/src/app/photo-gallery/photo-gallery.component.css
+++ b/AKchatApp/src/app/photo-gallery/photo-gallery.component.css
@@ -9,3 +9,19 @@
 hr{
     margin: 10px 0px;
 }
+
+.like{
+    padding: 0px;
+    border: 0px;
+    background-color: transparent;
+}
+
+.comment{
+    padding: 0px;
+    border: 0px;
+    background-color: transparent;
+}
+
+.bi-heart-fill{
+    color: red;
+}
