--- a/AKchatApp/src/app/photo-gallery/photo-gallery.component.html
+++ b/AKchatApp/src/app/photo-gallery/photo-gallery.component.html
@@ -25,8 +25,8 @@
                         <hr>
                     <div class="card-body">
                         <p class="card-text" style="margin: 0px 0px 3px;">
-                            <!-- <i class="bi bi-heart" style="font-size: larger;"></i> <i
-                                class="bi bi-chat ms-1" style="font-size: larger;"></i> -->
+                          <button class="like" (click)="toggleHeartClass()">  <i [class]="heartIconClass" style="font-size: larger;"></i> </button>
+                          <button class="like"><i class="bi bi-chat ms-1" style="font-size: larger;"></i> </button>
                             </p>
                                 <span><span style="font-weight: 600;">{{data.uploadedUser}}</span>&nbsp; {{data.caption}}</span>
                     </div>
