--- a/AKchatApp/src/app/chat/messages/messages.component.html
+++ b/AKchatApp/src/app/chat/messages/messages.component.html
@@ -22,18 +22,23 @@
                 <div class="div1cont d-flex flex-column" *ngIf="message.from!==service.myName"
                     [class.d-none]="!msgservice.messageDivVisibility[messageId]">
                     <span (click)="DeleteMsg(message.messageid)" class="text-primary"><i class="bi bi-trash3-fill"></i>Delete</span>
-                    <span *ngIf="message.messageLike===1" (click)="LikeMsg(message.messageid,0)"><i class="bi bi-suit-heart-fill colorheart"></i>like</span>
-                    <span *ngIf="message.messageLike===0" (click)="LikeMsg(message.messageid,messageId)"><i class="bi bi-suit-heart-fill" [class.colorheart]="msgservice.messageDiv1Visibility[messageId]"></i>like</span>
+                    <span *ngIf="message.messageLike===1" (click)="LikeMsg(message.messageid,0,messageId)">
+                        <i *ngIf="message.likename!==service.myName" class="bi bi-suit-heart-fill" [class.colorheart]="msgservice.messageDiv1Visibility[messageId]"></i>
+                        <i *ngIf="message.likename===service.myName" class="bi bi-suit-heart-fill colorheart" [class.colorheart]="!msgservice.messageDiv1Visibility[messageId]"></i>
+                        like
+                    </span>
+                    <span *ngIf="message.messageLike===0" (click)="LikeMsg(message.messageid,messageId,messageId)"><i class="bi bi-suit-heart-fill" [class.colorheart]="msgservice.messageDiv1Visibility[messageId]"></i>like</span>
+
                     <span (click)="closediv(messageId)"><i class="bi bi-x-lg"></i>Close</span>
                 </div>
-                <span class="likelogo" *ngIf="message.from!==service.myName && message.messageLike===0" (click)="openDialogue(message.messageid)"><img src="assets/img/heart.jpg" style="height:15px;width:10px" [class.d-none]="!msgservice.messageDiv1Visibility[messageId]">
-                    <span>{{msgservice.messageDiv2Visibility[messageId]}}</span>
+                <span class="likelogo" *ngIf="message.from!==service.myName && message.messageLike===0" (click)="openDialogue(message.messageid)"><i class="bi bi-heart-fill colorheart" style="height:15px;width:10px" [class.d-none]="!msgservice.messageDiv2Visibility[messageId]"></i>
+                
                 </span>
-                <span class="likelogo {{'heart-'+ message.messageid}}" *ngIf="message.from!==service.myName && message.messageLike===1" (click)="openDialogue(message.messageid)"><img src="assets/img/heart.jpg" style="height:15px;width:10px">
-                    <span class="d-none">{{msgservice.messageDiv2Visibility[messageId]}}</span>
+                <span class="likelogo {{'heart-'+ message.messageid}}" *ngIf="message.from!==service.myName && message.messageLike===1" (click)="openDialogue(message.messageid)"><i class="bi bi-heart-fill colorheart" style="height:15px;width:10px"></i>
+                   
                     
                 </span>
-                <span class="likelogo text-primary" *ngIf="message.from!==service.myName">{{msgservice.messageDiv2Visibility[messageId]?.count}}</span> 
+                <span class="likelogo {{'count-'+ message.messageid}} text-primary" [attr.likename]="message.likename" *ngIf="message.from!==service.myName">{{message.count}}</span> 
 
                 <!-- <div *ngIf="message.from!==service.myName">
                     <span class="likelogo" *ngIf="message.MessageLike ===0" (click)="openDialogue()"><img src="assets/img/heart.jpg" style="height:15px;width:10px" [class.d-none]="!messageDiv1Visibility[messageId]"></span>
@@ -51,13 +56,13 @@
                  <span  class="likelogo"  *ngIf="message.MessageLike===0"><img src="assets/img/heart.jpg" style="height:15px;width:10px" [class.d-none]="!messageDiv1Visibility[messageId]"></span>
                  <span  class="likelogo"  *ngIf="message.MessageLike === 1"><img src="assets/img/heart.jpg" style="height:15px;width:10px" [class.d-none]="messageDiv1Visibility[messageId]"></span>
                </div> -->
-               <span  class="likelogo"   *ngIf="message.from===service.myName && message.messageLike===0"  (click)="openDialogue(message.messageid)"><img src="assets/img/heart.jpg" style="height:15px;width:10px" [class.d-none]="!msgservice.messageDiv1Visibility[messageId]">
-                <span>{{msgservice.messageDiv2Visibility[messageId]}}</span>
+               <span  class="likelogo"   *ngIf="message.from===service.myName && message.messageLike===0"  (click)="openDialogue(message.messageid)"><i class="bi bi-heart-fill colorheart" style="height:15px;width:10px" [class.d-none]="!msgservice.messageDiv2Visibility[messageId]"></i>
+                
             </span>
-               <span  class="likelogo {{'heart-'+ message.messageid}}"  *ngIf="message.from===service.myName && message.messageLike===1"  (click)="openDialogue(message.messageid)"><img src="assets/img/heart.jpg" style="height:15px;width:10px">
-                <span class="d-none">{{msgservice.messageDiv2Visibility[messageId]}}</span>
+               <span  class="likelogo {{'heart-'+ message.messageid}}"  *ngIf="message.from===service.myName && message.messageLike===1"  (click)="openDialogue(message.messageid)"><i class="bi bi-heart-fill colorheart" src="assets/img/heart.jpg" style="height:15px;width:10px"></i>
+                
               </span>
-              <span class="likelogo text-primary"  *ngIf="message.from===service.myName">{{msgservice.messageDiv2Visibility[messageId]?.count}}</span> 
+              <span class="likelogo text-primary {{'count-'+ message.messageid}}" [attr.likename]="message.likename"  *ngIf="message.from===service.myName">{{message.count}}</span> 
 
 
                 <span class="ml-1">{{message.content}}</span>
@@ -74,8 +79,12 @@
                     [class.d-none]="!msgservice.messageDivVisibility[messageId]">
                     <span (click)="DeleteMsg(message.messageid)" class="text-primary"><i
                             class="bi bi-trash3-fill me-1"></i>Delete</span>
-                    <span *ngIf="message.messageLike===1" (click)="LikeMsg(message.messageid,0)"><i class="bi bi-suit-heart-fill colorheart"></i>like</span>
-                    <span *ngIf="message.messageLike===0" (click)="LikeMsg(message.messageid,messageId)"><i class="bi bi-suit-heart-fill"  [class.colorheart]="msgservice.messageDiv1Visibility[messageId]"></i>like</span>
+                    <span *ngIf="message.messageLike===1" (click)="LikeMsg(message.messageid,0,messageId)">
+                        <i *ngIf="message.likename!==service.myName" class="bi bi-suit-heart-fill" [class.colorheart]="msgservice.messageDiv1Visibility[messageId]"></i>
+                        <i *ngIf="message.likename===service.myName" class="bi bi-suit-heart-fill colorheart" [class.colorheart]="!msgservice.messageDiv1Visibility[messageId]"></i>
+                        like
+                    </span>
+                    <span *ngIf="message.messageLike===0" (click)="LikeMsg(message.messageid,messageId,messageId)"><i class="bi bi-suit-heart-fill"  [class.colorheart]="msgservice.messageDiv1Visibility[messageId]"></i>like</span>
 
                     <span (click)="closediv(messageId)"><i class="bi bi-x-lg me-1"></i>Close</span>
                 </div>
